--- a/adminportal/src/main/resources/templates/common/footer-bottom-scripts.html
+++ b/adminportal/src/main/resources/templates/common/footer-bottom-scripts.html
@@ -23,12 +23,16 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <a class="btn btn-primary" th:href="@{/logout}">Logout</a>
                 </div>
             </div>
         </div>
     </div>
 
+    <script src="//cdn.ckeditor.com/4.16.0/standard/ckeditor.js"></script>
+    <script>
+    CKEDITOR.replace('description');
+    </script>
     <!-- Bootstrap core JavaScript-->
     <script th:src="@{/assets/vendor/jquery/jquery.min.js}"></script>
     <script th:src="@{/assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
@@ -38,6 +42,8 @@
 
     <!-- Custom scripts for all pages-->
     <script th:src="@{/assets/js/sb-admin-2.min.js}"></script>
+
+  
 
  
 </div>
