--- a/adminportal/src/main/resources/templates/common/sidebar.html
+++ b/adminportal/src/main/resources/templates/common/sidebar.html
@@ -20,6 +20,9 @@
     <!-- Custom styles for this template-->
     <link th:href="@{/assets/css/sb-admin-2.min.css}" rel="stylesheet">
 
+
+  
+
 </head>
 
 <body id="page-top">
@@ -63,12 +66,12 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
+                    <span>News</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
+                        
+                        <a class="collapse-item" href="buttons.html">Add New News</a>
                         <a class="collapse-item" href="cards.html">Cards</a>
                     </div>
                 </div>
