--- a/adminportal/src/main/resources/templates/common/sidebar.html
+++ b/adminportal/src/main/resources/templates/common/sidebar.html
@@ -71,7 +71,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         
-                        <a class="collapse-item" href="buttons.html">Add New News</a>
+                        <a class="collapse-item" th:href="@{/news/add}">Add New News</a>
                         <a class="collapse-item" href="cards.html">Cards</a>
                     </div>
                 </div>
