--- a/adminportal/src/main/resources/templates/addNews.html
+++ b/adminportal/src/main/resources/templates/addNews.html
@@ -24,7 +24,7 @@
 				enctype="multipart/form-data">
 				<fieldset>
 					<legend class="center-block">
-						New Book Information<span style="font-size: small"> * is a
+						New News Information<span style="font-size: small"> * is a
 							required field</span>
 					</legend>
 
