--- a/adminportal/src/main/resources/templates/addNews.html
+++ b/adminportal/src/main/resources/templates/addNews.html
@@ -56,7 +56,7 @@
 
 						<!-- publication date -->
 					<div class="form-group">
-						<label class="col-md-2 control-label" for="publicationDate">Publication
+						<label class="col-md-2 control-label" for="publicationDate">* Publication
 							Date</label>
 						<div class="col-md-8">
 							<input type="date" class="form-control" id="publicationDate"
@@ -109,7 +109,7 @@
 
 
 
-<label class="control-label" for="description">Description</label>
+<label class="control-label" for="description"> * Description</label>
 			 	<textarea name="description" id="description" th:value="${news.description}"></textarea>
 <span class="help-block">Description of the news</span>
 
