View newsList added

--- a/adminportal/src/main/resources/templates/common/footer-bottom-scripts.html
+++ b/adminportal/src/main/resources/templates/common/footer-bottom-scripts.html
@@ -43,6 +43,14 @@
     <!-- Custom scripts for all pages-->
     <script th:src="@{/assets/js/sb-admin-2.min.js}"></script>
 
+
+     <!-- Page level plugins -->
+    <script th:src="@{/assets/vendor/datatables/jquery.dataTables.min.js}"></script>
+    <script th:src="@{/assets/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
+
+     <!-- Page level custom scripts -->
+    <script th:src="@{/assets/js/demo/datatables-demo.js}"></script>
+
   
 
  
