--- a/adminportal/src/main/resources/templates/common/sidebar.html
+++ b/adminportal/src/main/resources/templates/common/sidebar.html
@@ -20,6 +20,9 @@
     <!-- Custom styles for this template-->
     <link th:href="@{/assets/css/sb-admin-2.min.css}" rel="stylesheet">
 
+    <!-- Custom styles for this page -->
+    <link th:href="@{/assets/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
+
 
   
 
@@ -71,8 +74,8 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         
-                        <a class="collapse-item" th:href="@{/news/add}">Add New News</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <a class="collapse-item" th:href="@{/news/add}">Add a new news</a>
+                        <a class="collapse-item" th:href="@{/news/newsList}">View news list</a>
                     </div>
                 </div>
             </li>
