--- a/adminportal/src/main/resources/templates/newsList.html
+++ b/adminportal/src/main/resources/templates/newsList.html
@@ -20,7 +20,43 @@
 
                   
 
-                <h1>News List Page!!</h1>
+             <!-- DataTales Example -->
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-default">News List</h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th>Title</th>
+                                            <th>Author</th>
+                                            <th>Category</th>
+                                            <th>Publication Date</th>
+                                            <th>Active?</th>
+                                            <th>Operation</th>
+                                        </tr>
+                                    </thead>
+                                  
+                                    <tbody>
+                                        <tr data-th-each="news : ${newsList}">
+
+                                          <input hidden="hidden" name="id" th:value="${news.id}">
+                                            <td th:text="${news.title}"></td>
+                                              <td th:text="${news.author}"></td>
+                                                <td th:text="${news.category}"></td>
+                                                  <td th:text="${news.publicationDate}"></td>
+                                                    <td th:text="${news.active}"></td>
+                                                      <td>delete</td>
+                                           
+                                        </tr>
+                                    
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
                 <!-- /.container-fluid -->
