--- a/news-website/src/main/resources/templates/login.html
+++ b/news-website/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 
 
 </head>
-<body>
+<body style="background-image: url('/assets/img/pocket-watch-665871_1280.jpg'); background-repeat: no-repeat; background-size: cover;">
 <main class="login-bg" th:classappend="${classActiveLogin}? 'in active'">
 
 <div class="login-form-area">
