--- a/news-website/src/main/resources/templates/myProfile.html
+++ b/news-website/src/main/resources/templates/myProfile.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="/assets/css/style.css">
 </head>
-<body>
+<body style="background-image: url('/assets/img/pocket-watch-665871_1280.jpg'); background-repeat: no-repeat; background-size: cover;">
 <main class="login-bg" th:classappend="${classActiveEdit}? 'in active'">
 
 <div class="register-form-area">
