--- a/news-website/src/main/resources/static/assets/css/magazinize-newspaper.css
+++ b/news-website/src/main/resources/static/assets/css/magazinize-newspaper.css
@@ -5701,7 +5701,11 @@ input[type="button"].btn-block {
     display: none;
   }
 }
-
+@media (min-width: 992px){
+  .myToggleIcon{
+    display:flex !important
+  }
+}
 @media (max-width: 1199.98px) {
   .navbar-expand-xl > .container,
   .navbar-expand-xl > .container-fluid, .navbar-expand-xl > .container-sm, .navbar-expand-xl > .container-md, .navbar-expand-xl > .container-lg, .navbar-expand-xl > .container-xl {
