trending topics added

--- a/adminportal/src/main/resources/templates/common/sidebar.html
+++ b/adminportal/src/main/resources/templates/common/sidebar.html
@@ -92,6 +92,9 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" th:href="@{/category/add}">Add a new category</a>
                         <a class="collapse-item" th:href="@{/category/categoryList}">View category list</a>
+                                                <a class="collapse-item" th:href="@{/trendingTopic/add}">Add a new trending topic</a>
+                        <a class="collapse-item" th:href="@{/trendingTopic/trendingTopicList}">View trending topic list</a>
+
                        
                     </div>
                 </div>
