--- a/news-website/src/main/resources/templates/contact.html
+++ b/news-website/src/main/resources/templates/contact.html
@@ -41,58 +41,66 @@
 <div class="container">
 <div class="row">
 <div class="col-12">
+
+  <div class="alert alert-success" th:if="${messageSent}">
+          Your message has been sent successfully. We will get back to you as soon as possible.
+  </div>
 <h2 class="contact-title">Get in Touch</h2>
 </div>
 <div class="col-lg-8">
-<form class="form-contact contact_form" action="https://preview.colorlib.com/theme/onedu/contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+
+
+<form class="form-contact contact_form" th:action="@{/contact/add}" method="post">
 <div class="row">
 
 <div class="col-sm-6">
 <div class="form-group">
-<input class="form-control valid" name="name" id="name" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" placeholder="Enter your name">
+<input class="form-control valid" name="name" id="name" type="text" autofocus="autofocus" required="required" placeholder="Enter your name">
 </div>
 </div>
 <div class="col-sm-6">
 <div class="form-group">
-<input class="form-control valid" name="email" id="email" type="email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" placeholder="Email">
+<input class="form-control valid" name="email" id="email" type="email"  placeholder="Email" required="required">
 </div>
 </div>
 <div class="col-12">
 <div class="form-group">
-<input class="form-control" name="subject" id="subject" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Subject'" placeholder="Enter Subject">
+<input class="form-control" name="subject" id="subject" type="text"  placeholder="Enter Subject" required="required">
 </div>
 </div>
 
 <div class="col-12">
     <div class="form-group">
-    <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'" placeholder=" Enter Message"></textarea>
+    <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"  placeholder=" Enter Message" required="required"></textarea>
     </div>
     </div>
 </div>
 <div class="form-group mt-3">
-<button type="button" class="btn-send">Send</button>
+<button type="submit" class="btn-send">Send</button>
 </div>
 </form>
+
+
 </div>
 <div class="col-lg-3 offset-lg-1">
 <div class="media contact-info">
 <span class="contact-info__icon"><i class="fas fa-address-book"></i></span>
 <div class="media-body">
-<h3>Buttonwood, California.</h3>
-<p>Rosemead, CA 91770</p>
+<h3>Tekirdağ, Çorlu.</h3>
+<p>Silahtarağa, Üniversite 1.Sokak No:13, 59860 Çorlu/Tekirdağ</p>
 </div>
 </div>
 <div class="media contact-info">
 <span class="contact-info__icon"><i class="fas fa-mobile-alt"></i></span>
 <div class="media-body">
-<h3>+1 253 565 2365</h3>
+<h3>(0282) 250 23 00</h3>
 <p>Mon to Fri 9am to 6pm</p>
 </div>
 </div>
 <div class="media contact-info">
 <span class="contact-info__icon"><i class="far fa-envelope"></i></span>
 <div class="media-body">
-<h3><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="54272124243b262014373b383b26383d367a373b39">[email&#160;protected]</a></h3>
+<h3><a href="#" class="__cf_email__" data-cfemail="54272124243b262014373b383b26383d367a373b39">hakan.sandal9@hotmail.com</a></h3>
 <p>Send us your query anytime!</p>
 </div>
 </div>
