--- a/news-website/src/main/resources/templates/login.html
+++ b/news-website/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 
 </head>
 <body style="background-image: url('/assets/img/pocket-watch-665871_1280.jpg'); background-repeat: no-repeat; background-size: cover;">
-<main class="login-bg" th:classappend="${classActiveLogin}? 'in active'">
+<main class="login-bg">
 
 <div class="login-form-area">
 <div class="login-form">
