--- a/adminportal/src/main/resources/templates/login.html
+++ b/adminportal/src/main/resources/templates/login.html
@@ -45,7 +45,7 @@
 		                                Invalid username and password.
 	                                </div>
 
-	                                  <div class="alert alert-danger" th:if="${param.logout}">
+	                                  <div class="alert alert-info" th:if="${param.logout}">
 		                                  You have been logged out.
 	                                  </div>
 
