--- a/news-website/src/main/resources/templates/myAccount.html
+++ b/news-website/src/main/resources/templates/myAccount.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="/assets/css/style.css">
 <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 </head>
-<body>
+<body style="background-image: url('/assets/img/pocket-watch-665871_1280.jpg'); background-repeat: no-repeat; background-size: cover;">
 <main class="login-bg" th:classappend="${classActiveNewAccount}? 'in active'">
 
 <div class="register-form-area">
