--- a/news-website/src/main/resources/templates/common/header.html
+++ b/news-website/src/main/resources/templates/common/header.html
@@ -713,7 +713,7 @@ xmlns:sec="http://www.w3.org/1999/xhtml">
                 </div>
               </div>
               <div class="nav-item">
-                <a href="#" class="nav-link text-success">BUY&nbsp;NOW</a>
+                <a sec:authorize="isAuthenticated()" href="#" class="nav-link text-success">BUY&nbsp;NOW</a>
               </div>
             </div>
             <ul class="navbar-nav navbar-nav--right ml-auto w-25 justify-content-end">
