--- a/adminportal/src/main/resources/templates/userList.html
+++ b/adminportal/src/main/resources/templates/userList.html
@@ -35,7 +35,7 @@
 											<th>Username</th>
 											<th>Email</th>
 													<th>Phone</th>
-															<th>Status</th>
+														<th>Enabled</th>
 															<th>Operation</th>
                                          
                                         </tr>
@@ -49,8 +49,9 @@
 											  <td th:text="${user.lastname}"></td>
 											    <td th:text="${user.username}"></td>
 												<td th:text="${user.email}"></td>
-													 <td th:text="${user.phone}"></td>
-													  <td th:text="${user.status}"></td>
+                                                     <td th:text="${user.phone}"></td>
+                                                     	 <td th:text="${user.enabled}"></td>
+										
 													    
                                                  
                                                       <td>delete</td>
