--- a/adminportal/src/main/resources/templates/addNews.html
+++ b/adminportal/src/main/resources/templates/addNews.html
@@ -123,7 +123,7 @@
 						</div>
 						<div class="col-md-8">
 							<input id="newsImage" type="file" name="newsImage"
-								th:value="${news.newsImage}" />
+								th:value="${news.image}" />
 						</div>
 					</div>
 
