--- a/news-website/src/main/resources/templates/index.html
+++ b/news-website/src/main/resources/templates/index.html
@@ -43,47 +43,24 @@
 
 
                             <div class="post-content sumry-content">
+                              <span data-th-each="StartAt6Find2News : ${StartAt6Find2NewsList}">
                               <div class="post-category text-uppercase">
-                                <a href="category.html" class="post-category-a">World</a> <span class="post-category-separator">/</span> <a href="category.html" class="post-category-sub-a">Politic</a>
+                                <a href="category.html" class="post-category-a" th:text="${StartAt6Find2News.category}"></a>
                               </div><!-- /.post-meta post-category text-uppercase -->
-                              <h3 class="post-title sumry-title">
-                                <a href="article-sidebar.html" class="post-title-a sumry-title-a">Ruritania protest crackdown: Five things to should know and why</a>
+                              <h3 class="post-title sumry-title" style="font-size: 19px;">
+                                <a href="article-sidebar.html" class="post-title-a sumry-title-a" th:text="${StartAt6Find2News.title}"></a>
                               </h3>
                               <div class="post-excerpt d-none d-md-block">
-                                <p>
-                                  A Deep Analysis from latest Ruritania protest crackdown consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                <p th:utext="${#strings.abbreviate(StartAt6Find2News.description,90)}">
+                                  
                                 </p>
                                   <div class="post-meta">
-                                <span class="post-author"><a href="posts-by-author.html" class="post-meta-a">John Doe</a></span> <span class="post-meta-separator">&nbsp;•&nbsp;</span> <span class="post-time"><a href="#" class="post-meta-a">1 day
-                                ago</a></span>
+                                <span class="post-author"><a href="posts-by-author.html" class="post-meta-a" th:text="${StartAt6Find2News.author}"></a></span> <span class="post-meta-separator">&nbsp;•&nbsp;</span> <span class="post-time"><a href="#" th:text="${StartAt6Find2News.publicationDate}" class="post-meta-a">
+                                </a></span>
                               </div>
                               </div><!-- /.post-excerpt d-none d-md-block -->
-
-
-
-
-                              <div class="post-meta">
-                                <span class="post-author"><a href="posts-by-author.html" class="post-meta-a">John Doe</a></span> <span class="post-meta-separator">&nbsp;•&nbsp;</span> <span class="post-time"><a href="#" class="post-meta-a">1 day
-                                ago</a></span>
-                              </div>
-                              <aside class="sumry-more d-flex flex-column">
-                                <hr class="divider w-25 my-2">
-                                <ul class="list-unstyled posts posts__list mt-auto mb-0">
-                                  <li class="post">
-                                    <h6 class="post-title">
-                                      <a href="article-sidebar.html" class="post-title-a">Police and protesters clash during Ruritania recent protest</a>
-                                    </h6>
-                                  </li>
-                                  <li class="post">
-                                    <h6 class="post-title">
-                                      <a href="article-sidebar.html" class="post-title-a">High-schoolers banned from prom after attending climate change protest</a>
-                                    </h6>
-                                  </li>
-                                </ul><!-- /.list-unstyled posts posts__list mt-auto mb-0 -->
-                                <p class="mb-0">
-                                  <small>More from:</small> <a href="posts-by-coverage.html" class="badge badge-success">Ruritania Protest</a>
-                                </p>
-                              </aside><!-- /.post-more -->
+</span>
+                              
                             </div><!-- /.post-content sumry-content -->
 
 
@@ -95,6 +72,8 @@
 
                           </div><!-- /.sumry-body -->
                         </div><!-- /.sumry-inner -->
+                     
+                     
                       </article><!-- /.post post__default post__sumry sumry__horz sumry__horz-2to1 size-md col-12 sumry__valign-none-->
                       <article class="post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none">
                         <div class="sumry-inner">
