--- a/adminportal/src/main/resources/templates/addNews.html
+++ b/adminportal/src/main/resources/templates/addNews.html
@@ -41,6 +41,17 @@
 						</div>
 					</div>
 
+					<!-- title -->
+					<div class="form-group">
+						<label class="col-md-2 control-label" for="title">* Sub Title</label>
+
+						<div class="col-md-8">
+							<input type="text" name="subTitle" class="form-control" id="subTitle"
+								th:value="${news.subTitle}" required="required" placeholder="Sub Title" />
+							<span class="help-block">Sub Title of the news</span>
+						</div>
+					</div>
+
 
 					<!-- author -->
 					<div class="form-group">
