--- a/news-website/src/main/resources/templates/index.html
+++ b/news-website/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
                                 <a href="article-sidebar.html" class="post-title-a sumry-title-a" th:text="${StartAt6Find2News.title}"></a>
                               </h3>
                               <div class="post-excerpt d-none d-md-block">
-                                <p th:utext="${#strings.abbreviate(StartAt6Find2News.description,90)}">
+                                <p th:utext="${#strings.abbreviate(StartAt6Find2News.subTitle,70)}">
                                   
                                 </p>
                                   <div class="post-meta">
@@ -75,6 +75,8 @@
                      
                      
                       </article><!-- /.post post__default post__sumry sumry__horz sumry__horz-2to1 size-md col-12 sumry__valign-none-->
+                     
+                     
                       <article class="post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none">
                         <div class="sumry-inner">
                           <hr class="divider sumry-divider">
@@ -162,36 +164,28 @@
                           </div><!-- /.sumry-body -->
                         </div><!-- /.sumry-inner -->
                       </article><!-- /.post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none-->
-                      <article class="post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none">
+
+                        <article class="post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none">
                         <div class="sumry-inner">
                           <hr class="divider sumry-divider">
                           <div class="sumry-body">
                             <div class="post-content sumry-content">
                               <div class="post-category text-uppercase">
-                                <a href="category.html" class="post-category-a">Architecture</a> <span class="post-category-separator">/</span> <a href="category.html" class="post-category-sub-a">Building</a>
+                                <a href="category.html" class="post-category-a">World</a> <span class="post-category-separator">/</span> <a href="category.html" class="post-category-sub-a">Politic</a>
                               </div><!-- /.post-meta post-category text-uppercase -->
                               <h3 class="post-title sumry-title">
-                                <a href="article-sidebar.html" class="post-title-a sumry-title-a">Architecture is More Than Just Designing Gorgeous Buildings</a>
+                                <a href="article-sidebar.html" class="post-title-a sumry-title-a">Could John Doe or Tom Harry unite the country? They Certainly Could</a>
                               </h3>
-                              <div class="post-meta">
-                                <span class="post-author"><a href="posts-by-author.html" class="post-meta-a">Ava Adore</a></span> <span class="post-meta-separator">&nbsp;•&nbsp;</span> <span class="post-time"><a href="#" class="post-meta-a">1 day
-                                ago</a></span>
-                              </div>
-                            </div><!-- /.post-content sumry-content -->
-                          </div><!-- /.sumry-body -->
-                        </div><!-- /.sumry-inner -->
-                      </article><!-- /.post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none-->
-                      <article class="post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none">
-                        <div class="sumry-inner">
-                          <hr class="divider sumry-divider">
-                          <div class="sumry-body">
-                            <div class="post-content sumry-content">
-                              <div class="post-category text-uppercase">
-                                <a href="category.html" class="post-category-a">World</a> <span class="post-category-separator">/</span> <a href="category.html" class="post-category-sub-a">Security</a>
-                              </div><!-- /.post-meta post-category text-uppercase -->
-                              <h3 class="post-title sumry-title">
-                                <a href="article-sidebar.html" class="post-title-a sumry-title-a">Schoolkids’ phones are easy targets for fake News And Scams, Beware</a>
-                              </h3>
+                              <div class="post-excerpt d-none d-lg-flex row">
+                                <div class="col-3 order-2 pl-0">
+                                  <img src="/assets/1-1/xs/perry-grone-lbLgFFlADrY-unsplash.jpg" class="img w-100" alt="Image">
+                                </div><!-- /. col-3 order-2 pl-0 -->
+                                <div class="col-9 order-1">
+                                  <p>
+                                    Not the question we want but question we need to answer consectetur adipisicing elit
+                                  </p>
+                                </div><!-- /. col-9 order-1 -->
+                              </div><!-- /.post-excerpt d-none d-lg-flex row row -->
                               <div class="post-meta">
                                 <span class="post-author"><a href="posts-by-author.html" class="post-meta-a">John Doe</a></span> <span class="post-meta-separator">&nbsp;•&nbsp;</span> <span class="post-time"><a href="#" class="post-meta-a">1 day
                                 ago</a></span>
@@ -200,25 +194,71 @@
                           </div><!-- /.sumry-body -->
                         </div><!-- /.sumry-inner -->
                       </article><!-- /.post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none-->
-                      <article class="post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none">
+
+
+                        <article class="post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none">
                         <div class="sumry-inner">
                           <hr class="divider sumry-divider">
                           <div class="sumry-body">
                             <div class="post-content sumry-content">
                               <div class="post-category text-uppercase">
-                                <a href="category.html" class="post-category-a">Architecture</a> <span class="post-category-separator">/</span> <a href="category.html" class="post-category-sub-a">Landscape</a>
+                                <a href="category.html" class="post-category-a">World</a> <span class="post-category-separator">/</span> <a href="category.html" class="post-category-sub-a">Politic</a>
                               </div><!-- /.post-meta post-category text-uppercase -->
                               <h3 class="post-title sumry-title">
-                                <a href="article-sidebar.html" class="post-title-a sumry-title-a">Landscape Designers Will always Be Key to the Future of Our Cities</a>
+                                <a href="article-sidebar.html" class="post-title-a sumry-title-a">Could John Doe or Tom Harry unite the country? They Certainly Could</a>
                               </h3>
+                              <div class="post-excerpt d-none d-lg-flex row">
+                                <div class="col-3 order-2 pl-0">
+                                  <img src="/assets/1-1/xs/perry-grone-lbLgFFlADrY-unsplash.jpg" class="img w-100" alt="Image">
+                                </div><!-- /. col-3 order-2 pl-0 -->
+                                <div class="col-9 order-1">
+                                  <p>
+                                    Not the question we want but question we need to answer consectetur adipisicing elit
+                                  </p>
+                                </div><!-- /. col-9 order-1 -->
+                              </div><!-- /.post-excerpt d-none d-lg-flex row row -->
                               <div class="post-meta">
-                                <span class="post-author"><a href="posts-by-author.html" class="post-meta-a">Ava Adore</a></span> <span class="post-meta-separator">&nbsp;•&nbsp;</span> <span class="post-time"><a href="#" class="post-meta-a">1 day
+                                <span class="post-author"><a href="posts-by-author.html" class="post-meta-a">John Doe</a></span> <span class="post-meta-separator">&nbsp;•&nbsp;</span> <span class="post-time"><a href="#" class="post-meta-a">1 day
                                 ago</a></span>
                               </div>
                             </div><!-- /.post-content sumry-content -->
                           </div><!-- /.sumry-body -->
                         </div><!-- /.sumry-inner -->
                       </article><!-- /.post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none-->
+
+
+                        <article class="post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none">
+                        <div class="sumry-inner">
+                          <hr class="divider sumry-divider">
+                          <div class="sumry-body">
+                            <div class="post-content sumry-content">
+                              <div class="post-category text-uppercase">
+                                <a href="category.html" class="post-category-a">World</a> <span class="post-category-separator">/</span> <a href="category.html" class="post-category-sub-a">Politic</a>
+                              </div><!-- /.post-meta post-category text-uppercase -->
+                              <h3 class="post-title sumry-title">
+                                <a href="article-sidebar.html" class="post-title-a sumry-title-a">Could John Doe or Tom Harry unite the country? They Certainly Could</a>
+                              </h3>
+                              <div class="post-excerpt d-none d-lg-flex row">
+                                <div class="col-3 order-2 pl-0">
+                                  <img src="/assets/1-1/xs/perry-grone-lbLgFFlADrY-unsplash.jpg" class="img w-100" alt="Image">
+                                </div><!-- /. col-3 order-2 pl-0 -->
+                                <div class="col-9 order-1">
+                                  <p>
+                                    Not the question we want but question we need to answer consectetur adipisicing elit
+                                  </p>
+                                </div><!-- /. col-9 order-1 -->
+                              </div><!-- /.post-excerpt d-none d-lg-flex row row -->
+                              <div class="post-meta">
+                                <span class="post-author"><a href="posts-by-author.html" class="post-meta-a">John Doe</a></span> <span class="post-meta-separator">&nbsp;•&nbsp;</span> <span class="post-time"><a href="#" class="post-meta-a">1 day
+                                ago</a></span>
+                              </div>
+                            </div><!-- /.post-content sumry-content -->
+                          </div><!-- /.sumry-body -->
+                        </div><!-- /.sumry-inner -->
+                      </article><!-- /.post post__default post__sumry sumry__text size-sm col-6 col-lg-4 sumry__valign-none-->
+                     
+                     
+                      
                     </div><!-- /.posts posts__sumrys row sumrys__divider -->
                   </div><!-- /.section-body -->
                 </div><!-- /.section-inner -->
@@ -385,11 +425,7 @@
                 <div class="bg position-absolute section-bg"></div>
                 <hr class="divider section-divider">
                 <div class="section-inner">
-                  <header class="section-header">
-                    <h2 class="section-title">
-                      <a href="archive.html" class="section-title-a">Just In</a>
-                    </h2>
-                  </header>
+                  
                   <div class="section-body">
                     <div class="posts posts__sumrys row sumrys__divider">
                       <article class="post post__default post__sumry sumry__horz sumry__horz-1to3 sumry__reverse size-xs col-12 col-sm-6 col-lg-4 col-xl-12 sumry__valign-top">
@@ -544,6 +580,27 @@
                           </div><!-- /.sumry-body -->
                         </div><!-- /.sumry-inner -->
                       </article><!-- /.post post__default post__sumry sumry__horz sumry__horz-1to3 sumry__reverse size-xs col-12 col-sm-6 col-lg-4 col-xl-12 sumry__valign-top-->
+
+ <article class="post post__default post__sumry sumry__horz sumry__horz-1to3 sumry__reverse size-xs col-12 col-sm-6 col-lg-4 col-xl-12 sumry__valign-top">
+                        <div class="sumry-inner">
+                          <hr class="divider sumry-divider">
+                          <div class="sumry-body">
+                            <figure class="figure post-thumbnail sumry-thumbnail">
+                              <a href="article-sidebar.html" class="img-wrapper"><img src="/assets/1-1/sm/sandy-millar-Kl4LNdg6on4-unsplash.jpg" class="img figure-img" alt="Image"></a>
+                            </figure>
+                            <div class="post-content sumry-content">
+                              <div class="post-category text-uppercase">
+                                <a href="category.html" class="post-category-a">World</a> <span class="post-category-separator">/</span> <a href="category.html" class="post-category-sub-a">Economic</a>
+                              </div><!-- /.post-meta post-category text-uppercase -->
+                              <h3 class="post-title sumry-title">
+                                <a href="article-sidebar.html" class="post-title-a sumry-title-a">What is Unsteadystan economic embargo? And How they coping with it?</a><span class="post-meta text-muted">&nbsp;–</span> <span class=
+                                "post-meta post-time"><a href="#" class="post-meta-a">1 day ago</a></span>
+                              </h3>
+                            </div><!-- /.post-content sumry-content -->
+                          </div><!-- /.sumry-body -->
+                        </div><!-- /.sumry-inner -->
+                      </article><!-- /.post post__default post__sumry sumry__horz sumry__horz-1to3 sumry__reverse size-xs col-12 col-sm-6 col-lg-4 col-xl-12 sumry__valign-top-->
+
                     </div><!-- /.posts posts__sumrys row sumrys__divider -->
                   </div><!-- /.section-body -->
                 </div><!-- /.section-inner -->
