--- a/news-website/src/main/resources/templates/index.html
+++ b/news-website/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
                               <div class="owl-carousel owl-theme">
                              
                                 <span data-th-each="lastSixNews : ${lastSixNewsList}">
-                               <img alt="" th:src="*{'data:image/jpeg;base64,'+{lastSixNews.image}}">
+                               <a th:href="@{/newsDetail?id=}+${lastSixNews.id}"><img alt="" th:src="*{'data:image/jpeg;base64,'+{lastSixNews.image}}"></a>
                            </span>
                               
                       
@@ -45,18 +45,18 @@
                             <div class="post-content sumry-content">
                               <span data-th-each="StartAt6Find2News : ${StartAt6Find2NewsList}">
                               <div class="post-category text-uppercase">
-                                <a href="category.html" class="post-category-a" th:text="${StartAt6Find2News.category}"></a>
+                                <span  class="post-category-a" th:text="${StartAt6Find2News.category}"></span>
                               </div><!-- /.post-meta post-category text-uppercase -->
                               <h3 class="post-title sumry-title" style="font-size: 19px;">
-                                <a href="article-sidebar.html" class="post-title-a sumry-title-a" th:text="${StartAt6Find2News.title}"></a>
+                                <a th:href="@{/newsDetail?id=}+${StartAt6Find2News.id}" class="post-title-a sumry-title-a" th:text="${StartAt6Find2News.title}"></a>
                               </h3>
                               <div class="post-excerpt d-none d-md-block">
-                                <p th:utext="${#strings.abbreviate(StartAt6Find2News.subTitle,70)}">
+                                <p th:text="${#strings.abbreviate(StartAt6Find2News.subTitle,70)}">
                                   
                                 </p>
                                   <div class="post-meta">
-                                <span class="post-author"><a href="posts-by-author.html" class="post-meta-a" th:text="${StartAt6Find2News.author}"></a></span> <span class="post-meta-separator">&nbsp;•&nbsp;</span> <span class="post-time"><a href="#" th:text="${StartAt6Find2News.publicationDate}" class="post-meta-a">
-                                </a></span>
+                                <span class="post-author"><span class="post-meta-a" th:text="${StartAt6Find2News.author}"></span></span> <span class="post-meta-separator">&nbsp;•&nbsp;</span> <span class="post-time"><span th:text="${StartAt6Find2News.publicationDate}" class="post-meta-a">
+                                </span></span>
                               </div>
                               </div><!-- /.post-excerpt d-none d-md-block -->
 </span>
