index.html updated

--- a/news-website/src/main/resources/templates/newsDetail.html
+++ b/news-website/src/main/resources/templates/newsDetail.html
@@ -610,7 +610,7 @@ Article Sidebar</title>
     <div class="col post-meta">
       <div class="media align-items-center">
         
-<img src="/assets/avatar/256x256/ariel-lustre-368240.jpg" class="rounded-circle mr-3" alt="Image" width="48" height="48">
+<img src="/assets/avatar/256x256/usericon.png" class="rounded-circle mr-3" alt="Image" width="48" height="48">
         <div class="media-body">
           <span class="post-author d-block mb-0"><span  class="post-meta-a" th:text="${news.author}"></span>, <span  class="post-meta-a" th:text="'@'+${news.author}"></span></span> 
           <span class="post-time"><span class="post-meta-a" th:text="${news.publicationDate}"></span></span>
