--- a/adminportal/src/main/resources/templates/newsList.html
+++ b/adminportal/src/main/resources/templates/newsList.html
@@ -34,6 +34,7 @@
                                             <th>Title</th>
                                             <th>Author</th>
                                             <th>Category</th>
+                                            <th>NewsType</th>
                                             <th>Publication Date</th>
                                             <th>Active?</th>
                                             <th>Operation</th>
@@ -47,6 +48,7 @@
                                             <td th:text="${news.title}"></td>
                                               <td th:text="${news.author}"></td>
                                                 <td th:text="${news.category}"></td>
+                                                  <td th:text="${news.newsType}"></td>
                                                   <td th:text="${news.publicationDate}"></td>
                                                     <td th:text="${news.active}"></td>
                                                       <td>delete</td>
